--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -11,10 +11,28 @@ general {
         interval = 5
 }
 
+order += "cpu_temperature 0"
+order += "ipv6"
 order += "disk /"
+order += "wireless _first_"
+order += "memory"
 order += "battery all"
 order += "load"
 order += "tztime local"
+
+cpu_temperature 0 {
+        format = "Cpu: %degrees °C"
+}
+
+wireless _first_ {
+        # format_up = "W: (%quality at %essid) %ip"
+        format_up = "W: (%quality) Leaked IP: %ip"
+        format_down = "W: down"
+}
+
+memory {
+    format = "Mem: (%used) / %total"
+} 
 
 battery all {
         format = "%status %percentage %remaining"
@@ -25,10 +43,9 @@ tztime local {
 }
 
 load {
-        format = "%1min"
+        format = "Hot Loads: %1min"
 }
 
 disk "/" {
         format = "%avail"
 }
-
