--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -12,20 +12,19 @@ general {
 }
 
 order += "cpu_temperature 0"
-order += "ipv6"
 order += "disk /"
 order += "wireless _first_"
 order += "memory"
 order += "battery all"
 order += "load"
 order += "tztime local"
+order += "volume master"
 
 cpu_temperature 0 {
         format = "Cpu: %degrees °C"
 }
 
 wireless _first_ {
-        # format_up = "W: (%quality at %essid) %ip"
         format_up = "W: (%quality) Leaked IP: %ip"
         format_down = "W: down"
 }
@@ -48,4 +47,12 @@ load {
 
 disk "/" {
         format = "%avail"
+}
+
+volume master {
+        format = "Vol ♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
